--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,16 @@
 {
-  "cSpell.words": ["JWTs", "therobbrennan"]
+  "cSpell.words": [
+    "Codesandbox",
+    "JWTs",
+    "Overfetching",
+    "QL",
+    "QL’s",
+    "Quickstart",
+    "Underfetching",
+    "entrypoint",
+    "imdb",
+    "letmein",
+    "s",
+    "therobbrennan"
+  ]
 }
